--- a/NLB/app/src/main/res/values/colors.xml
+++ b/NLB/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#48BEFF</color>
+    <color name="colorPrimaryDark">#3A94C6</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="nlb_blue">#48BEFF</color>
     <color name="blank">#00FFFFFF</color>
