--- a/NLB/app/src/main/res/layout/activity_listview.xml
+++ b/NLB/app/src/main/res/layout/activity_listview.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
@@ -29,27 +29,42 @@
 
                 <TextView
                     android:id="@+id/activity_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/ozrad_bold"
                     android:text="TextView"
-                    android:gravity="left"
+                    android:gravity="right"
                     android:textColor="@android:color/white"
-                    android:textSize="24sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
 
-                <TextView
-                    android:id="@+id/activity_class"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/ozrad_bold"
-                    android:text="TextView"
-                    android:gravity="left"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/activity_class"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:gravity="right"
+                        android:text="TextView"
+                        android:textColor="@android:color/white"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:text="מיועדת לכיתות: " />
+                </LinearLayout>
 
 
             </LinearLayout>
@@ -58,30 +73,97 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="70dp"
+                android:layout_marginStart="10dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/activity_date"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/ozrad_bold"
-                    android:text="TextView"
-                    android:gravity="left"
-                    android:textColor="@android:color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/creation_date"
-                    android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/activity_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:gravity="left"
+                        android:text="TextView"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="תאריך הפעולה: "
+                        android:textColor="@android:color/white"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/ozrad_bold"
-                    android:text="TextView"
-                    android:gravity="left"
-                    android:textColor="@android:color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/activity_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:gravity="left"
+                        android:text="TextView"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:text="תתקיים בשעה: "
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/creation_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:gravity="left"
+                        android:text="TextView"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/ozrad_bold"
+                        android:text="נוספה בתאריך: " />
+                </LinearLayout>
 
             </LinearLayout>
 
