--- a/NLB/app/src/main/res/layout/add_activity.xml
+++ b/NLB/app/src/main/res/layout/add_activity.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="@color/nlb_blue"
-    app:cardCornerRadius="30dp"
+    android:background="@color/nlb_blue"
     android:layout_width="match_parent"
-    android:padding="5dp"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -27,7 +26,7 @@
 
         <EditText
             android:id="@+id/activityNameEditTxt"
-            android:layout_width="160dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
@@ -64,14 +63,37 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/fileNameTxtView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:text="@string/לא_נבחרה_פעולה"
-            android:textColor="@android:color/white" />
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fileNameTxtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:text="@string/לא_נבחרה_פעולה"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/btnChooseFile"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="11dp"
+                android:background="@drawable/button_design"
+                android:backgroundTint="@color/nlb_blue_dark"
+                android:fontFamily="@font/ozrad_bold"
+                android:text="@string/הוסף_פעולה"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -79,6 +101,21 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnActivityTime"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="11dp"
+                android:background="@drawable/button_design"
+                android:backgroundTint="@color/nlb_blue_dark"
+                android:fontFamily="@font/ozrad_bold"
+                android:text="@string/שעה_פעולה"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnActivityDate"
@@ -95,21 +132,6 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnChooseFile"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="11dp"
-                android:background="@drawable/button_design"
-                android:backgroundTint="@color/nlb_blue_dark"
-                android:fontFamily="@font/ozrad_bold"
-                android:text="@string/הוסף_פעולה"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
         </LinearLayout>
 
         <Button
@@ -117,8 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="11dp"
+            android:layout_margin="11dp"
             android:background="@drawable/button_design"
             android:backgroundTint="@color/nlb_blue_dark"
             android:fontFamily="@font/ozrad_bold"
@@ -129,4 +150,4 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
