--- a/NLB/app/src/main/res/layout/activity_admins_hub.xml
+++ b/NLB/app/src/main/res/layout/activity_admins_hub.xml
@@ -98,4 +98,84 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/logout"
+            android:layout_width="175dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            app:cardBackgroundColor="@color/nlb_blue"
+            app:cardCornerRadius="30dp">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/logoutImg"
+                    android:layout_width="130dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginEnd="5dp"
+                    app:srcCompat="@drawable/logout_100px" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/ozrad_bold"
+                    android:text="@string/התנתקות"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/messages"
+            android:layout_width="175dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/nlb_blue"
+            app:cardCornerRadius="30dp">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/messagesImg"
+                    android:layout_width="130dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginEnd="5dp"
+                    app:srcCompat="@drawable/my_messages_100px" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/ozrad_bold"
+                    android:text="@string/ההודעות_שלי"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
 </LinearLayout>
