--- a/NLB/app/src/main/res/layout/activity_guides_hub.xml
+++ b/NLB/app/src/main/res/layout/activity_guides_hub.xml
@@ -100,4 +100,40 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/messages"
+        android:layout_width="175dp"
+        android:layout_height="170dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        app:cardBackgroundColor="@color/nlb_blue"
+        app:cardCornerRadius="30dp">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/messagesImg"
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15sp"
+                android:layout_marginEnd="5dp"
+                app:srcCompat="@drawable/my_messages_100px" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/ozrad_bold"
+                android:text="@string/ההודעות_שלי"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
