--- a/NLB/app/src/main/res/layout/add_activity.xml
+++ b/NLB/app/src/main/res/layout/add_activity.xml
@@ -49,6 +49,7 @@
                 android:id="@+id/activityClass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:popupBackground="@color/nlb_blue"
                 android:layout_weight="1" />
 
             <TextView
